# GP-ng

./: .gitignore  CMakeLists.txt  main.cpp
Qt5Gui/: CMakeLists.txt  GPQt.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tiffgraphicsview.cpp  tiffgraphicsview.h
libGP/: CMakeLists.txt  tiffimg.cpp  tiffimg.h  tiffimgset.cpp  tiffimgset.h
notes/: notes.txt
